Added readme and tweaked the header bar a bit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   <script type="text/javascript">var pusher = new Pusher('29c6481be676d3fec47c'); console.log(pusher);</script>
 </head>
 <body>
+  <div class="navigation">
+    <div class="grid">
+    <%= link_to "", root_path, :class => 'logo' %>
+    </div>
+  </div>
   <div class="page">
     
     <%= yield %>
