--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -12,7 +12,15 @@ body {
 
 /* APPLICATION STYLES
 -------------------------------------------------------------------------------------*/
-.page { z-index: 1; min-height: 100%; width: 960px; margin: 0 auto; padding: 0px; position: static; overflow: auto; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+.navigation {
+  position: fixed; top: 0px; z-index: 9999; display: block; overflow: visible;
+  padding: 4px 0px; width: 100%; left: 0px right: 0px; top: 0px;
+  background: #2E3137; text-align: center;
+}
+.logo { background: url('logo.png') left bottom no-repeat; width: 160px; height: 45px; padding: 0px; margin: 2px auto 4px auto; float: none; display: block; }
+.navigation .grid { width: 400px; margin: 0 auto; overflow: auto; }
+
+.page { z-index: 1; min-height: 100%; width: 400px; margin: 0 auto; padding: 0px; position: static; overflow: auto; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 h3 { text-align: center; font-size: 2em;}
 
 .kanji {
