--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h3 id="kanjiname"><%= @kanji.symbolName %></h3>
 <div id="kanji" class="kanji" style="background: url(<%= @kanji.imageUrl %>)center center no-repeat #fff;"></div>
-<a href="#" id="playbutton" class="kanjibutton">Play</a>
+<a href="#" id="playbutton" class="kanjibutton">PLAY</a>
 <%= link_to 'See the results!', @kanji, :id => "results", :class => 'kanjibutton' %>
 <div id="countdown">10</div>
 
