--- a/app/views/home/play.html.erb
+++ b/app/views/home/play.html.erb
@@ -2,7 +2,9 @@
 
 <body>
 <div class="fs-container">
+  <!-- <h2 class="draw">Uploading<br />drawing</h2> -->
   <div class="literally"><canvas></canvas></div>
+  <div class="countdown"><span class="waiting">Waiting.</span></div>
 </div>
-
+<div class="uploading"></div>
 <%= javascript_include_tag "kanjiclient.js" %>
