--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>Kanjirai</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+  <link rel="shortcut icon" href="assets/favicon2.png?v=2" />
   <%= stylesheet_link_tag "base", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <script src="http://js.pusher.com/2.1/pusher.min.js"></script>
-  <script type="text/javascript">var pusher = new Pusher('29c6481be676d3fec47c'); console.log(pusher);</script>
+  <script type="text/javascript">var pusher = new Pusher('2444194d376d68e127da'); console.log(pusher);</script>
 </head>
 <body>
   <div class="navigation">
